2.19.1
 - docs: add developer's section
2.19.0
 - feat: support accessing private S3 basins (#174)
 - enh: enable lut selection in analysis view plots (#71)
 - fix: only allow user to choose "R.exe" in R binary manual search (#173)
 - enh: correctly show system R binary in settings
 - ref: migrate from pyqt5 to pyqt6 (#165)
 - ref: migrate from pkg_resources to importlib.resources (#155)
 - setup: support Python 3.12
 - setup: new dependency "boto3" via "dclab[s3]""
2.18.2
 - enh: enable lut selection to plot isoelasticity lines (#71)
 - enh: replace findText with findData of comboBox_visc_model
 - fix: allow to select R binary when not found automatically
 - enh: enable lut selection for emodulus computation in bulk actions (#71)
 - enh: enable lut selection for emodulus computation (#71)
 - setup: bump dclab to 0.62.5 (properly resolve path to R executable)
2.18.1
 - setup: bump dclab to 0.61.3 (replace rpy2 with wrapper) (#73 #161)
2.18.0
 - BREAKING CHANGE: set default viscosity model for Young's modulus
   computation to "buyukurganci-2022", because it is more accurate
   and also because it is defined for the "0.83% MC-PBS" medium
 - BREAKING CHANGE: remove support for machine learning extensions
   (.modc files), because they are not used
 - fix: remove leading/trailing slashes for DCOR servers
 - setup: bump dclab to 0.61.1 (fix basin-based array access, export from
   datasets with internal basins, other minor fixes)
2.17.0
 - setup: bump dclab to 0.60.0 (internal basin support, export logs)
2.16.5
 - setup: bump dclab to 0.59.1 (mapped-basin now fully supported)
2.16.4
 - setup: bump dclab to 0.59.0 (improved support for basin features)
2.16.3
 - maintenance release
2.16.2
 - fix: data export feature selection must default to features_loaded
 - enh: only show local features in QuickView Event Feature tab
 - enh: show dcnum pipeline identifiers in Analysis view
 - enh: add section:key tool tips for analysis view metadata